--- a/.gitattributes
+++ b/.gitattributes
@@ -34,6 +34,8 @@
 #*.modelproj merge=binary
 #*.sqlproj   merge=binary
 #*.wwaproj   merge=binary
+#*.mdf       merge=binary
+#*.ldf       merge=binary
 
 ###############################################################################
 # behavior for image files
