--- a/App.config
+++ b/App.config
@@ -1,15 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-        <section name="entityFramework"
-          type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-          requirePermission="false"/>
-    </configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework"
+      type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+      requirePermission="false"/>
+  </configSections>
   <!--Подключение к БД-->
    <connectionStrings>
-        <add name="TelephoneDirectoryDBContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename='|DataDirectory|\App_Data\TelephoneDirectoryDB.mdf';Integrated Security=True"
-          providerName="System.Data.SqlClient"/>
+        <add name="TelephoneDirectoryDBContext"
+           connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename='|DataDirectory|\App_Data\TelephoneDirectoryDB.mdf';Integrated Security=True"
+           providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <!--Конец-->
     <startup> 
