--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Costura.Fody" version="3.3.3" targetFramework="net471" />
   <package id="EntityFramework" version="6.4.0" targetFramework="net471" />
+  <package id="Fody" version="4.2.1" targetFramework="net471" developmentDependency="true" />
 </packages>
